﻿Revision history for {{$dist->name}}

{{$NEXT}}
 [00 Minor]
 - Internals.

 [Dependencies::Stats]
 - Dependencies changed since 1.002000, see misc/*.deps* for details
 - develop: (suggests: ↑1)
 - runtime: +1

 [Internals]
 - dump_config impemented with config_dumper

1.002000 2014-08-18T03:26:39Z
 [00 Minor]
 - use JSON::MaybeXS instead of JSON

 [Dependencies::Stats]
 - Dependencies changed since 1.001001, see misc/*.deps* for details
 - develop: +1 ↑1 (suggests: ↑2)
 - runtime: +1 -1

1.001001 2014-08-15T21:17:00Z
 [00 Trivial]
 - CPANDAY!
 - no code changes.
 - tests augmented.
 - whitespace adjusted.

 [Dependencies::Stats]
 - Dependencies changed since 1.001000, see misc/*.deps* for details
 - develop: +1 (suggests: ↑1)
 - test: -3

 [Misc]
 - Improve source side POD to reduce build side whitespace.

 [Tests]
 - update reportprereqs test

1.001000 2014-07-30T13:22:16Z
 [00 Major]
 - Added tests
 - Prereqs retrieved directly from Dist::Zilla now *WITHOUT* using EmulatePhase.
 - x_BuiltWith keys now added during META.* write out, which happens after prereqs finalization, by currying the
   FromCode coderef and injecting the data raw and de/reserializing.

 [Dependencies::Stats]
 - Dependencies changed since 1.000001, see misc/*.deps* for details
 - configure: ↓1
 - develop: (suggests: ↑1)
 - runtime: +4 -4
 - test: +2 -1 (recommends: ↑1 -2)

1.000001 2014-07-19T02:16:32Z
 [00 Trivial]
 - Misc packaging cleanups

 [Dependencies::Stats]
 - Dependencies changed since 1.000000, see misc/*.deps* for details
 - develop: +3 -3 (suggests: +2 -1)
 - test: +2 ↑1 (recommends: +1)

1.000000 2014-05-20T05:33:17Z
 [00 Major]
 - Moderately sized packaging changes, a few small code changes.

 [01 Tooling]
 - Now uses ExtUtils::MakeMaker for installer.
 - "Latest" dependency logic now only added to /recommends/

 [02 Versioning]
 - Version scheme is now x.yyyyyy ( mantissa = 6 )
 - This is the primary reason for the 1.x on the box.

 [Bugfix]