@@ -3,14 +3,19 @@
 {{$NEXT}}
  [00 Minor]
  - Internals.
+ - Tests.
 
  [Dependencies::Stats]
  - Dependencies changed since 1.002000, see misc/*.deps* for details
  - develop: (suggests: ↑1)
  - runtime: +1
+ - test: +1
 
  [Internals]
  - dump_config impemented with config_dumper
+
+ [Tests]
+ - Tests reimplented in dztest
 
 1.002000 2014-08-18T03:26:39Z
  [00 Minor]
